migrate: import AI baseline from elemopractice fwl